force-app/main/default/objects/Skill_Set_Experience__c/Skill_Set_Experience__c.object-meta.xml
<CustomObject>
    <label>Skill Set Experience</label>
    <nameField>
        <label>Skill Set Experience Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skill Set Experiences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>