force-app/main/default/objects/Skill_Set_Experience__c/fields/Candidate_Profile__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Profile</label>
    <referenceTo>Candidate_Profile__c</referenceTo>
    <relationshipLabel>Skill Set Experiences</relationshipLabel>
    <relationshipName>Skill_Set_Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>