force-app/main/default/objects/Skill_Set_Experience__c/fields/Job_Posting__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Posting</label>
    <referenceTo>Job_Posting__c</referenceTo>
    <relationshipLabel>Skill Set Experiences</relationshipLabel>
    <relationshipName>Skill_Set_Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>