force-app/main/default/objects/Skill_Set_Experience__c/fields/Skill_Set__c.field-meta.xml
<CustomField>
    <fullName>Skill_Set__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Skill Set</label>
    <referenceTo>Skill_Set__c</referenceTo>
    <relationshipLabel>Skill Set Experiences</relationshipLabel>
    <relationshipName>Skill_Set_Experiences</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>