force-app/main/default/objects/Skill_Set_Experience__c/fields/SkillSet_Experience__c.field-meta.xml
<CustomField>
    <fullName>SkillSet_Experience__c</fullName>
    <label>SkillSet Experience</label>
    <length>225</length>
    <type>Text</type>
</CustomField>